--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -3,10 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        WindowStartupLocation="CenterScreen"
         xmlns:local="clr-namespace:BigApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding ElementName=MainFrame, Path=Content.Title}" 
+        Height="450"
+        Width="800">
+    
+    
     <Grid>
-        
+        <Frame
+            x:Name="MainFrame"
+            NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
